[package]
name = "cfgfifo"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"
description = "(De)serialize common configuration file formats based on file extension"
authors = ["John Thorvald Wodder II <cfgfifo@varonathe.org>"]
repository = "https://github.com/jwodder/cfgfifo"
license = "MIT"
keywords = [
    "configuration",
    "data-serialization",
    "file-formats",
    "serde",
]
categories = ["config", "encoding", "filesystem"]
exclude = ["/.*"]

[dependencies]
anyhow = { version = "1.0.75", optional = true }
json5 = { version = "0.4.1", optional = true }
ron = { version = "0.8.1", optional = true }
serde = "1.0.190"
serde_json = { version = "1.0.107", optional = true }
serde_path_to_error = "0.1.14"
serde_yaml = { version = "0.9.27", optional = true }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.50"
toml = { version = "0.8.6", optional = true }

[features]
default = ["json", "json5", "ron", "toml", "yaml"]
examples = ["dep:anyhow", "serde/derive"]
json = ["dep:serde_json"]
json5 = ["dep:json5", "dep:serde_json"]
ron = ["dep:ron"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"
rstest = { version = "0.18.2", default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
tempfile = "3.8.1"

[[example]]
name = "appconfig"
required-features = ["examples"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
